# Xray-pack

./: Cargo.toml  README.md  README_zh.md  cargo-install.sh  test-clippy.sh  test-run.sh
.gitcode/: dependabot.yml
.gitcode/workflows/: build-xray.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-merge-dependabot.yml  build-xray.yml  release.yml  test.yml
src/: cli.rs  compile.rs  errors.rs  main.rs  package.rs  repo.rs
src/download/: geodat.rs  mod.rs  v2ray_extra.rs  wintun.rs
