[package]
name = "xray-pack"
version = "0.3.1"
edition = "2024"
description = "Script to build and package Xray-core."

[profile.dev-rel]
inherits = "dev"
opt-level = 2

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "=4.5.56", features = ["derive"] }
env_logger = "=0.11.8"
futures = "=0.3.31"
git2 = { version = "=0.20.3", features = ["vendored-libgit2"] }
log = "=0.4.29"
openssl-sys = "=0.9.111"
reqwest = { version = "=0.13.1", features = ["stream", "socks"] }
sha2 = "=0.10.9"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["bytes", "fs", "full"] }
which = "=8.0.0"
zip = "=7.2.0"

[target.'cfg(not(target_os = "darwin"))'.dependencies]
git2 = { version = "=0.20.3", features = ["vendored-libgit2", "vendored-openssl"] }
openssl-sys = { version = "=0.9.111", features = ["vendored"] }

[target.'cfg(target_os = "darwin")'.dependencies]
git2 = { version = "=0.20.3", features = ["vendored-libgit2"] }
openssl-sys = "=0.9.111"
