[package]
name = "xray-pack"
version = "0.4.1-alpha.1"
edition = "2024"
description = "Script to build and package Xray-core."

[profile.dev-rel]
inherits = "dev"
opt-level = 2

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "=4.5.58", features = ["derive"] }
env_logger = "=0.11.9"
futures = "=0.3.32"
git2 = { version = "=0.20.4", features = ["vendored-libgit2"] }
log = "=0.4.29"
openssl-sys = "=0.9.111"
reqwest = { version = "=0.13.2", features = ["stream", "socks"] }
sha2 = "=0.10.9"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["bytes", "fs", "full"] }
which = "=8.0.0"
zip = "=8.1.0"

[target.'cfg(not(target_os = "darwin"))'.dependencies]
git2 = { version = "=0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
openssl-sys = { version = "=0.9.111", features = ["vendored"] }

[target.'cfg(target_os = "darwin")'.dependencies]
git2 = { version = "=0.20.4", features = ["vendored-libgit2"] }
openssl-sys = "=0.9.111"
